# ChangeLog for www-client/netrik
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/netrik/ChangeLog,v 1.19 2013/04/14 11:51:25 pinkbyte Exp $

  14 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> -netrik-1.16.1.ebuild:
  Drop old revision

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> netrik-1.16.1-r1.ebuild:
  Stable for x86, wrt bug #459660

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> netrik-1.16.1-r1.ebuild:
  Stable for amd64, wrt bug #459660

  12 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> netrik-1.16.1-r1.ebuild,
  +files/netrik-1.16.1-configure.patch:
  Respect CFLAGS, wrt bug #459660, thanks to Agostino Sarubbo

*netrik-1.16.1-r1 (10 Apr 2013)

  10 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> +netrik-1.16.1-r1.ebuild,
  +files/netrik-1.16.1-ncurses-tinfo.patch:
  Revision bump: EAPI 5, correct dependency on sys-libs/ncurses, add patch to
  properly handle tinfo, wrt bug #459660

  26 Sep 2012; Michael Palimaka <kensington@gentoo.org> -netrik-1.15.6.ebuild:
  Remove old.

  04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> netrik-1.16.1.ebuild:
  Stable for amd64, wrt bug #428326

  29 Jul 2012; Jeff Horelick <jdhore@gentoo.org> netrik-1.16.1.ebuild:
  marked x86 per bug 428326

*netrik-1.16.1 (27 Jun 2012)

  27 Jun 2012; Michael Palimaka <kensington@gentoo.org> +netrik-1.16.1.ebuild,
  metadata.xml:
  Version bump. Migrate to EAPI 4, correct dependencies, and avoid installation
  of LICENSE. Drop nls USE flag since it does nothing. Add upstream metadata.

  22 Feb 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> netrik-1.15.6.ebuild:
  Install docs in the right place, bug #241468 by flameeyes.

  26 Jan 2010; Dawid Węgliński <cla@gentoo.org> netrik-1.15.6.ebuild:
  Respect user CFLAGS (bug #2414600)

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.
