@@ -1,0 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pgmagick-0.5.6.tar.gz 42116 SHA256 bddc8f545645831bf1de817e4d99f7c3a1eaa076bac6a6c4101c28ddf52f5b86 SHA512 40d008b7ccf2ed53535e463aebcaa0277dbe20aa34061eeb95bdb3f529c609159bb6d6a7fedbfa5371f504bc9abe1721dc04c96f72fe1eb88fc0a7e8699d8fc0 WHIRLPOOL d237b5a6ea136122814a02106408adaf45b40e33d39b550a4f305b4bacaf70dad2d07806f1252e4e984f037262150b067a4604a16fa893274d989c31f3e4136a
+EBUILD pgmagick-0.5.6.ebuild 703 SHA256 422479111c9e5627af717a45d69d7b9548668cf907f730a3bd7dfda17637748d SHA512 e8c4922357ae45eb3311d7ed6a9569a98d76c994fb9a35cd26525174fa19d4bb02913e72902f030fc7f60bc1db13f6e150bab50741d38b05a5f0f80ff77325ec WHIRLPOOL 1bd6715c1b4b8991298144620ca38c7a03c13aa0d12c54fd7726b7b9d711176f1b1f6ed11e479d325374820f286ba6f6270f867375c81989acc52620702cab82
+MISC ChangeLog 378 SHA256 d47d80548abd6842781e6d921d2d4ddc7f5262c431874a258c1a88e588c7930a SHA512 ec0cead5f7a5fb9ff42078ed029f8bf5e82254c8e95097f63e4cbe0852764b22f591abd0d34d9b0fd6f74d656777fe11aa08cd4e6e874c5ed23916baadbbc54b WHIRLPOOL 50eefa3a44f8330f434590a0c062265a74fe73d6c3baed872f3becd5e6ab77adde9a3f2d4d7190f38faac641363c6d6d83cc6d35c303d0d070df05c3038d3fff
+MISC metadata.xml 289 SHA256 3f911c2d0a70369fcbf217eca928ca7e185823d52ff4b90c1b1d3e3adcd9049b SHA512 53e116fe9aa040cf5534bdd36614135507e2d236048c00b73dbba12208c07d369d3e2fe1930e3d6d7a8ee2b66a1702ef327ad6c92aa4b110b592ca6b89c3d683 WHIRLPOOL d3e5e01f6ad5f4c8658bebb16fd2a66110b017204b2777930ae85a7f526966043ad303e1513c5c268621f47b834d48adf26110da832421214e6818d3a4a4b6b1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQF8BAEBCABmBQJRle0iXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RjI0QTQ0MjI1OURBNzI4MEIyREExRkQx
+RTdDRkM3NzFFMENBODVGAAoJEB58/HceDKhf6HkH/3cTOjhwr0z383hM5poy8iFM
+pbPKfb/0uYagvoUpluWMQBL7InJ1Wgu5ZvULWX3teEDFpCYBqSICGfManEqIZ62/
+ghRgD2pcSZ39gjgoNuJlLGrfUIXSH768eujzlfafAQ1dag/s2KhwCC0Vb0AqavqN
+q8eL31k2V6x3eYzxZGwvRjIhMtzhvUbzMiZrDqiQoKA6BudAVyaHIrmPuZUNzYfc
+/qfOdOCdAIE0sYn2morJ0q1cxq7dM8IWIsnqf4Gx1+zhLocqB/WqYzKWQc2MQvri
+L3EzpRdtB0ISB5TzFUmkSHGR7b5CZHj2lm0QlzjuD0WlVVcLK+4dCRNiPOpV/c8=
+=BJkh
+-----END PGP SIGNATURE-----
