@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd>python</herd>
+	<upstream>
+		<remote-id type="pypi">pgmagick</remote-id>
+		<remote-id type="bitbucket">hhatto/pgmagick</remote-id>
+	</upstream>
+</pkgmetadata>
