@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=media-gfx/graphicsmagick[cxx] dev-libs/boost:=[python,python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/setuptools[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)] python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+DESCRIPTION=Yet another boost.python based wrapper for GraphicsMagick.
+EAPI=5
+HOMEPAGE=https://pypi.python.org/pypi/pgmagick/ http://bitbucket.org/hhatto/pgmagick/
+IUSE=python_targets_python2_5 python_targets_python2_6 python_targets_python2_7
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=media-gfx/graphicsmagick[cxx] dev-libs/boost:=[python,python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)] python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+SLOT=0
+SRC_URI=mirror://pypi/p/pgmagick/pgmagick-0.5.6.tar.gz
+_eclasses_=distutils-r1	10e59ecabebf0c37ad5cd8827434b108	eutils	b8fdb86895c268cca7ae1626264a30f4	multibuild	32fd04fe3ee97494341710886fd70dfe	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	0e2bc7326c807a3e8133847eadc3dd26	python-utils-r1	9fc80a4f06f33ede447b5647fddca301	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=5dd6b8637e14e3b5a65eadf3872f399a
