@@ -9,4 +9,4 @@ RDEPEND=>=sys-libs/ncurses-5.1[unicode] sys-libs/readline
 SLOT=0
 SRC_URI=mirror://sourceforge/netrik/netrik-1.16.1.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	b8fdb86895c268cca7ae1626264a30f4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=94de3506b0ef6b82943446513db3d563
+_md5_=198efda154c46927fe7e10f787f2e96e
