@@ -4,17 +4,17 @@ Hash: SHA256
 AUX netrik-1.16.1-configure.patch 1671 SHA256 43529d501fdbf5f561a5490b6045f099158af4e5f994ac759e2b40283b33f6a2 SHA512 1954428316b8ad5bdd0707bac62d7e298f2282eda1df31cbd9d8b88fc8cc5b38a85cd87ec85f10fb24bfb18840e4c678eb03a4daae438e753095bb8552b1ab21 WHIRLPOOL 9c786547f87aa45328590ec661d2e6c9143acfc546ba39f39ed2980f73fee5ee2092d5a57f7c1ba979c2394cf1351d12f93899bcd5b77dc4b459b4f46ddd731c
 AUX netrik-1.16.1-ncurses-tinfo.patch 334 SHA256 abc8babfc560aa41c6e192eff2d1d9b439c601b070a84b2c36512a9467594102 SHA512 6aa6c276e7052ccf887893b285254aa27947f3554cc8a2f31a4e1b22ebdee950fcef6dd586c953638f8a6864ad402d3fd2ada563f2d1b8521ef8a4c5d22987e4 WHIRLPOOL 140707b85e73655e7c2e151c479790548a121794a3e6088704a2c5b7bf21a152d9440b238e65b7baad05b853f02f94034a5c7e3d3dcd358ccf10cc091853b970
 DIST netrik-1.16.1.tar.gz 476669 SHA256 3e742d9ef866c12075e7771148e39a6892d0dcdf70f43aecafa09e0ed925b78a SHA512 73e754f8ce34226446b47c9438fb45dcc094c19ca8a2933a6cc68ed32e9cf40c9ace3189c8e63bd4537d286b608c515efd8433f795d4238ad30bd6612dd850e7 WHIRLPOOL 3492775e3f48b3cda7b7ff660d67a37397e007c074fdd647d72b1f41f93a3e5dd6cd8842d6ca84fb8ddfb9386e8d1e10cbb7054119736f3f53acf40e918b3e45
-EBUILD netrik-1.16.1-r1.ebuild 869 SHA256 a5614e581e658f03bd0d0890a9543a912340e805f75cb693f078da477e24d0a6 SHA512 daa99614c787d232638f8d6e566200e77cffc98e5290cc291f7c4fded3d05580cf6c74ed440d1e30e675f3a63ea19c775955e383c21c5e64614d5b50c6497df1 WHIRLPOOL bf62314b400294d1f9e40ec5c29bbf7ff52a58318e4b18c7fd69b0ab82fa8cf8ec991b18c016e9332e68768544834d298b580cfc3eecfbd9a83cb01e3668e428
-MISC ChangeLog 3487 SHA256 9792b1ed9e4a41518367111dee1177f1df75dd67ef6513c455fd1baac95c621c SHA512 035d8274aac1fe827b1a87528bafac8b2fab4249d8ac35b7ab899b2ec8dbd6e87359d184fccfc5f2779be03d61b4d53924208bb3d20928fed998fb3edb5f415d WHIRLPOOL 4bdb59edb0b37ea2c126bb7e453c06b34cb3acbf94487fa06991bef2058a3ed3d93256e5087582f265f29318122ab9f140e56825c7d7381c9302c904a553d89a
+EBUILD netrik-1.16.1-r1.ebuild 994 SHA256 a163d40055f2d8d5c4cadd26076e7791089fdb97af2627d09eebb46ce6adf73d SHA512 2bdc2fb5a9195f0a1facffa1e8f6d4637ead975e89dfb72524724f7d3950f832ca768111a9d3caffa907e8ae01dd7c84431d4b81673502c67ca7aec2c0fa3e4c WHIRLPOOL 39439731a1702bd8e30cc33e2478e0e7338d99f5c6d53b016b39375234c2ee7ca542ff32a4475fd0700f625e91373648df63617d2b9301f767eb6aa4b1a8755a
+MISC ChangeLog 3688 SHA256 ea821fef00e1ee740ca157adc9ad2970b083d1f51d0d536a77f97522121ab95e SHA512 a0fababa8e4837ca5703a32d44e944166a5ae8bbbf018ebedb5aef4c5dd4d5ffd2c512006f913d905c478a734f55c9be1e08fe58fac6d6036b2056ff2564ccdd WHIRLPOOL 24225e15050b5b46202eadc3cdf28ce038bdca234a542b8fa2544fdcc16da53b3f63ac39831af6cb57ba0a216e56bb0801cac74ba55d0706081e9880cccb9620
 MISC metadata.xml 412 SHA256 66db26e6f4cf3b0af851c59f1725bfb279a72a8c30436a232e5973b10887454a SHA512 01145212cc5b96850af04e9a3d9b7c25e35703fece47865da9f79a7b122ee814e1e23b4cf6330914512aceb489b2ca273c5a0db15910d02f57918db4921619ad WHIRLPOOL 84b62f9009e5a4f3babbbd9c3ffffb2b0f9a8daff34ea49dde2392b2cd1521d331202b583f911228106886361d2224187e16beb6084a47a5a175044a3ded792a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRapg+AAoJECo/aRed9267W2UIAMF9i8NIW7c4QI/QsLbHYcDZ
-tWCnlc5x+NgMhCFihqyoqXyBqOctazVfDn8SRv5TvJ9OlrnYH8AgEjP9H+Qoo27a
-u+FdwlIdYuLJeqArBArcQUnHJXkeerpsgVO7Mq05UL/SBi8tj+Ckws1/3oq5bZC2
-NygKUaddntWvRm91JLmhfccCgItWAopWQoYHoT0bO6DT1/O8r/AY+9Vow6pphIon
-KRT3TqsEF2r8tlpET/L+OYHvW1Gov8zC1paJOmtHl4TlRxhCRNoQC9M6KwamiioW
-28PAZjuqVPc7LnYrsHeNV5m/sTtKf+/Li24XDtDg2/6CmEp91bsTRTLxShwb8q8=
-=DPVC
+iQEcBAEBCAAGBQJRldoVAAoJECo/aRed9267We0H/REEkvaAObiKedT8OinI7A5o
+XGc9PHZ/j58qoQgrOq+UCww7o8HEelYlGRilAixJQQrf7ulrZB32awS8uswGtM7k
+XZArxnnvkky11TqM0ZyISyO1tOrE6AXuAOWqtZ8QBd3/AqkCwqGRWf1Nos7iiztC
+zG5Pp5WgAv2F0WA7gijD8JsoDWzA51Dy8oO1F9KaRJDXpdT2cgv/z+q9N/gG7JnH
+5JoWrYVKyv/0Ata6hOfndd4Ej0ml7Lg7YhN7C9YcpvPPnLRXXQ9r7MRuQdsFidz9
+C34jONL54FN6JvCn2Y9Kdml5jGfJyjhlfCj1W/XMzsnVWP1+W1fMNuxNMGOt1Pk=
+=GAht
 -----END PGP SIGNATURE-----
