@@ -1,0 +1,9 @@
+# ChangeLog for dev-python/pgmagick
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pgmagick/ChangeLog,v 1.1 2013/05/17 08:41:00 dev-zero Exp $
+
+*pgmagick-0.5.6 (17 May 2013)
+
+  17 May 2013; Tiziano Müller <dev-zero@gentoo.org> +metadata.xml,
+  +pgmagick-0.5.6.ebuild:
+  Initial commit, ebuild written by me.
