@@ -1,6 +1,10 @@
 # ChangeLog for www-client/netrik
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/netrik/ChangeLog,v 1.19 2013/04/14 11:51:25 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/netrik/ChangeLog,v 1.20 2013/05/17 07:20:20 pinkbyte Exp $
+
+  17 May 2013; Sergey Popov <pinkbyte@gentoo.org> netrik-1.16.1-r1.ebuild:
+  Add compatibility with Automake 1.13, wrt bug #467812. Thanks to Guy
+  <no.tellin AT gmail.com> for discovering this issue
 
   14 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> -netrik-1.16.1.ebuild:
   Drop old revision
